--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "accordion",
-	"version": "v2.0.0",
+	"version": "v2.0.1",
 	"description": "Silky-smooth accordion widgets with no external dependencies.",
 	"keywords": ["accordion", "widget", "component", "folding", "foldable", "fold", "ui"],
 	"repository": "https://github.com/Alhadis/Accordion",
 	"license": "ISC",
 	"dependencies": {},
-	"main": ["src/accordion.js"]
+	"main": "src/accordion.js"
 }
