Shorten list of filenames excluded from versioning
I could've just written `Simplify .gitignore`, but I love it when commit
titles fall on precisely 50 characters. Just like I get odd satisfaction
from lining every commit body's paragraph at 72 characters without added
spaces or hyphenation.

Live fast, die young, tag @tpope so he knows how much his commit-writing
guidelines warped me. For the better.

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,18 @@
-## Mac OS/X
-.apdisk
-.AppleDB
-.AppleDesktop
-.AppleDouble
 .DS_Store
-.LSOverride
-._*
-
-
-## IDE-specific
-sftp-config.json
-.project
-
-
-## Windows
-Desktop.ini
 Thumbs.db
-ehthumbs.db
-$RECYCLE.BIN/
-*.lnk
-
-
-## Other
-error_log
-node_modules
+Desktop.ini
+bower_components
 components
-npm-debug.log
+node_modules
+package-lock.json
+._*
+.\#*
+\#*\#
+*~
+*.log
+*.lock
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+!urls.log
