--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
 	"repository": "https://github.com/Alhadis/Accordion",
 	"license": "ISC",
 	"dependencies": {},
-	"main": "src/accordion"
+	"main": "src/accordion.js",
+	"scripts": {
+		"lint": "eslint --ext .mjs src"
+	}
 }
